testing fix for flicker on post fade in

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1045,75 +1045,37 @@ hr {
   background-image: -o-linear-gradient(left, transparent, #337ab7, transparent);
 }
 
-/* line 51, ../../sass/custom/_styles.scss */
-.come-in {
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/* line 49, ../../sass/custom/_styles.scss */
+article.slide-in {
   opacity: 0;
-  animation: fadeIn ease-in 1;
-  -moz-animation: fadein 1;
-  /* Firefox */
-  -webkit-animation: fadein ease-in  1;
-  /* Safari and Chrome */
-  -o-animation: fadein ease-in  1;
-  /* Opera */
-  animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  animation-duration: 1.5s;
-  -moz-animation-duration: 1.5s;
-  -webkit-animation-duration: 1.5s;
-  -o-animation-duration: 1.5s;
 }
 
-/* line 69, ../../sass/custom/_styles.scss */
-.already-visible {
-  opacity: 1;
-  animation: none;
-  -moz-animation: none;
-  /* Firefox */
-  -webkit-animation: none;
-  /* Safari and Chrome */
-  -o-animation: none;
-  /* Opera */
-}
-
-@keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@-moz-keyframes fadein {
-  /* Firefox */
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@-webkit-keyframes fadein {
-  /* Safari and Chrome */
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@-o-keyframes fadein {
-  /* Opera */
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-/* line 110, ../../sass/custom/_styles.scss */
-.fade-in {
+/* line 53, ../../sass/custom/_styles.scss */
+article.come-in {
   opacity: 0;
   /* make things invisible upon start */
   -webkit-animation: fadeIn ease-in 1;
@@ -1129,37 +1091,14 @@ hr {
   animation-duration: 1s;
 }
 
-/* line 125, ../../sass/custom/_styles.scss */
-.fade-in.one {
-  -webkit-animation-delay: 0.7s;
-  -moz-animation-delay: 0.7s;
-  animation-delay: 0.7s;
-}
-
-/* line 131, ../../sass/custom/_styles.scss */
-.fade-in.two {
-  -webkit-animation-delay: 1.2s;
-  -moz-animation-delay: 1.2s;
-  animation-delay: 1.2s;
-}
-
-/* line 137, ../../sass/custom/_styles.scss */
-.fade-in.three {
-  -webkit-animation-delay: 1.7s;
-  -moz-animation-delay: 1.7s;
-  animation-delay: 1.7s;
-}
-
-/* line 143, ../../sass/custom/_styles.scss */
-.fade-in.four {
-  -webkit-animation-delay: 2.2s;
-  -moz-animation-delay: 2.2s;
-  animation-delay: 2.2s;
-}
-
-/* line 149, ../../sass/custom/_styles.scss */
-.fade-in.five {
-  -webkit-animation-delay: 2.7s;
-  -moz-animation-delay: 2.7s;
-  animation-delay: 2.7s;
+/* line 68, ../../sass/custom/_styles.scss */
+article.already-visible {
+  opacity: 1;
+  animation: none;
+  -moz-animation: none;
+  /* Firefox */
+  -webkit-animation: none;
+  /* Safari and Chrome */
+  -o-animation: none;
+  /* Opera */
 }
